--- a/Document/Files/1_Introduction.tex
+++ b/Document/Files/1_Introduction.tex
@@ -6,7 +6,7 @@ The purpose of this document is to provide a full description of the design of t
 EasyLib and EasyLib - Librarian mobile applications, two native Android applications, providing insights into the goal of the system, the design of each component and how the project has been managed.
 
 \mysubsection{Scope}
-EasyLib is a mobile application that manages to make easier multiple management tasks that nowadays a library needs to deal with. It answers all the questions for which a library visitor usually stuck for an answer such as books description and availability, waiting queue for reserve a book, events taking place and news related to the library, and make really easy to the book search and reservation. The application allow the user to interface with all the libraries that choose to use EasyLib as management system, using a single identification process to interact with all of them.
+EasyLib is a mobile application that manages to make easier multiple management tasks that nowadays a librarians and libraries' users needs to deal with. It answers all the questions for which a library visitor usually stuck for an answer such as books description and availability, waiting queue for reserve a book, events taking place and news related to the library, and make really easy the book search and reservation. The application allow the user to interface with all the libraries that choose to use EasyLib as management system, using a single identification process to interact with all of them.
 EasyLib has been thought to cover also the Librarian necessity and help him into his daily work automatizing the book delivering and returning process and helping him to schedule his work. However, the librarian system that we are going to present in this document is a prototype with a fraction of the functionalities that have been designed and are left to a future upgraded of the app.
 
 
@@ -36,7 +36,7 @@ This paper is divided in six chapter.\\
 The first chapter is composed by an introduction of the system, its application domain, its goals and a glossary containing the most common expression used in order to give to the reader a basic knowledge of the system and to make him understand better the subsequent parts.\\\par
 In the second chapter we have provided a list of all the applications goals and the related requirements and we also listed their core functionalities with a synthetic description.\\
 
-The third chapter is devoted to the exposure of the overall design architecture of the system, the identification and definition of all the software components that characterize our system end to end and the external services and libraries used to accomplish all the goals that we aimed to satisfy. We also shown a deployment proposal and non-functionals requirements that we need to respect.\\
+The third chapter is devoted to the exposure of the overall design architecture of the system, the identification and definition of all the software components that characterize our system end to end, the external services and libraries used to accomplish all the goals that we aimed to satisfy. We also shown a deployment proposal and non-functionals requirements that we need to respect.\\
 
 The fourth chapter is exploited to show the most relevant decisions taken in the UI design and to show how the application looks to the final user using images taken during the real usage.\\
 
