--- a/Document/Files/2_Overall_Description.tex
+++ b/Document/Files/2_Overall_Description.tex
@@ -214,13 +214,13 @@
 \end{figure}
 \begin{enumerate}
 \item \emph{Advanced book search:}the user can search a book in the libraries using any combination of parameters between title, author’s name and category and, if he needs, he can also restrict his search in only one of the available libraries. If the user is in the library, he can scan a QR code on the book to retrieve all its information.
-\item \emph{Consulting book information:} the user can to consult all the available book’s information such as title, author’s name, category, publisher, the number of copies of the book available in each library, etc.
+\item \emph{Consulting book information:} the user can consult all the available book’s information such as title, author’s name, the number of copies of the book available in each library, etc.
 \item \emph{Reserve or get in line for a book:} the user can reserve a copy of the book if available or get in line for it just tapping a bottom.
 \item \emph{Visualize libraries’ news and events:}the user can remain constantly up-to-date with the new events organized and news posted by the available libraries checking out their dedicated pages. 
 \item \emph{Book a seat to an event:} : the user can book a seat in the events organized by the libraries to avoid the risk of missing the meeting with his favourite authors.
-\item \emph{Save favourite libraries:}the user can select his favourite libraries between that one present on the system in order to have a rapid access to their books, events and news. 
+\item \emph{Save favourite libraries:} the user can select his favourite libraries between that ones present on the system in order to have a rapid access to their books, events and news. 
 \item \emph{Set ratings:} the user can rate the books that he has read to spread his opinion to other readers.
-\item \emph{Keep track of read books:}the user can always access to the list of the book that he read directly and intuitively from his profile.
+\item \emph{Keep track of read books:} the user can always access to the list of the book that he read directly and intuitively from his profile.
 \end{enumerate}
 
 \newpage
@@ -233,7 +233,7 @@
 \begin{enumerate}
 \item \emph{Visualize his library information:}the librarian can visualize all the information inserted in his library such as books available, events, news, etc.
 \item \emph{Identify the user that reserved a book:} the librarian can scan the QRcode of a book and retrieve all the reservation for that book and the related user id. In this way the user can show to the librarian his personal Id authenticating himself and allowing the book delivering. A paired process is followed when the user returns a book.
-\item \emph{Record that a user has returned a book:}we the same approach of the former feature, the librarian can update into the Database a book status to returned.
+\item \emph{Record that a user has returned a book:} with the same approach of the former feature, the librarian can update into the Database a book status to returned.
 \end{enumerate}
 
 
@@ -244,5 +244,5 @@ In order to have the aimed behaviour of the app, few domain constraints must be 
 	\item The user needs to have a mobile phone or a tablet that support Android OS.
 	\item The Android OS version installed on the device must be KitKat (API level 19) or higher.
 	\item An access to an internet connection is always needed.
-	\item The must to be able to easily reach the physical library location to use the functionalities that need an interaction with the librarians, such as take and return a reserved book.
+	\item The users must be able to easily reach the physical library location to use the functionalities that need an interaction with the librarians, such as take and return a reserved book.
 \end{itemize}
