--- a/Document/Files/4_User_Interface_Design.tex
+++ b/Document/Files/4_User_Interface_Design.tex
@@ -23,7 +23,7 @@ Here are some of the main aspects :
 
 \vspace{5mm}
 \mysubsubsection{Register \& Login}
-When the app opens up the user can Login filling up the form with his Email or Password (Figure 1) or he can Register opening the Register Activity and filling that form (Figure 2). In other cases it can happen that the user needs to reset his password cause he has forgotten it or maybe his already logged in so the app will show just a Loading (Figure 3).
+When the app opens up the user can Login filling up the form with his Email or Password (Figure 1) or he can Register opening the Register Activity and filling that form (Figure 2). In other cases can happen that the user needs to reset his password or maybe he is already logged in. In the former case the app will show just a Loading (Figure 3).
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.15]{Images/UI/Login_Register/1}
@@ -37,7 +37,7 @@ When the app opens up the user can Login filling up the form with his Email or P
 \vspace{3mm}
 \mysubsubsection{Libraries + Set Favourite}
 On MainActivity with the Home Fragment (Figure 1) the user can see the Libraries that he has set as favourite and open them in order to see their content. Otherwise he can tap on "All Libraries" button and the list of the all available ones will appear (Figure 2).\par
-Once a library is select the LibraryActivity will open up showing at the top the library information and underneath its contents (news, events, books). At the end a button will be shown in order to make the user able to set the library as Favourite / remove it from Favourites (Figure 3).
+Once a library is selected the LibraryActivity will open up showing at the top the library information and its contents underneath (news, events, books). At the end a button will be shown in order to make the user able to set the library as Favourite / remove it from Favourites (Figure 3).
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.15]{Images/UI/Libraries/1}
@@ -50,7 +50,7 @@ Once a library is select the LibraryActivity will open up showing at the top the
 
 \newpage
 \mysubsubsection{Events + Reserve Seat}
-As previously seen, inside the LibraryActivity are shown the events organized by the library so the user can open them and see their info (Figure 1). Moreover in case there are still available seats he can reserve a seat.\par
+As previously seen, inside the LibraryActivity the events organized by the library are shown. The user can open them and see their info (Figure 1). Moreover in case there are still available seats he can reserve one of them.\par
 All the events joined by the user are shown on the Profile (Figure 2).
 \begin{figure}[H]
 	\centering
