--- a/Document/Files/4_User_Interface_Design.tex
+++ b/Document/Files/4_User_Interface_Design.tex
@@ -77,8 +77,8 @@ There are 2 ways to search for a book :
 
 \newpage
 \mysubsubsection{Books + Reservation}
-Once the user selects a book the "BookActivity" opens up and shows him all book's information and image (Image 1). At the end it's displayed the current status of the book (if it's been already read or not) and the list of all the libraries where it's available (Image 2).\par
-If the user wants, he can reserve the book by tapping the "Reserve" button and so the status is updated (Image 3).
+Once the user selects a book the "BookActivity" opens up and shows him its information and cover image (Image 1). At the end the current status of the book is displayed (if it's been already read or not) and also the list of all the libraries where the book available (Image 2).\par
+If the user wants, he can reserve the book by tapping the "Reserve" button and update its status (Image 3).
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.15]{Images/UI/Book/1}
@@ -100,9 +100,9 @@ The user can do that only in case there are available books, in a specific libra
 
 \newpage
 \mysubsubsection{Profile}
-The user can see all his information on the "Profile Fragment" on "Main Activity", also his USER ID (Image 1).\par
-He can also see : all his Favourite Libraries, all the Joined Events and all the Read Books (Image 2).\par
-In case of necessity he can also modify it's credentials by tapping the "Edit Icon" on top of the "Profile Fragment" and by filling up the form shown on the "Edit Profile Activity" (Image 3).
+The user can see all his information on the "Profile Fragment" on "Main Activity", along with his USER ID (Image 1).\par
+The fragment also displays all his favourite libraries, Joined Events and Read Books (Image 2).\par
+In case of necessity he can modify it's credentials by tapping the "Edit Icon" on top of the "Profile Fragment" and by filling up the form shown on the "Edit Profile Activity" (Image 3).
 \vspace*{1cm}
 \begin{figure}[H]
 	\centering
@@ -116,8 +116,8 @@ In case of necessity he can also modify it's credentials by tapping the "Edit Ic
 
 \newpage
 \mysubsubsection{Confirm Reservation / Book Returned (EasyLib - Librarian)}
-On the Librarian side, he can open the "Book Activity" scanning a qr-code and retrieving book all the book information and the list of all the Reservations for that one.\par
-Based on the status of each reservation, different buttons are shown : if the book is already physically taken from the library than just the "Returned" button is shown; otherwise 2 buttons are shown "Reserve" that confirms the user reservations and sets the status to "Taken", or "Remove" that removes the reservation.\par
+On the Librarian side, he can open the "Book Activity" scanning a qr-code and retrieving all the book's information and the list of the Reservations for it.\par
+Based on the status of each reservation, different buttons are shown: if the book is already physically taken from the library then just the "Returned" button is shown; otherwise 2 buttons are shown: "Reserve", that confirms the user reservations and sets the status to "Taken", or "Remove" that removes the reservation.\par
 The images underneath shows the portrait and landscape orientation of this activity on tablet.
 \vspace*{1cm}
 \begin{figure}[H]
